k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-backend
  labels:
    app.kubernetes.io/name: social-backend
